vendored_parsers/tree-sitter-f-sharp/grammar.js
    file: $ =>
      seq(
        repeat($.compiler_directive_decl),
        choice(
          $.named_module,
          repeat1($.namespace),
          repeat($._module_elem),
        ),
      ),

    named_module: $ =>
      seq(
        'module',
        optional($.access_modifier),
        field('name', $.long_identifier),
        repeat($._module_elem),
      ),

    _module_elem: $ =>
      choice(
        $.value_declaration,
        $.module_defn,
        $.module_abbrev,
        $.import_decl,
        $.compiler_directive_decl,
        $.fsi_directive_decl,
        $.type_definition,
        $._expression,
        // $.exception_defn
      ),

    value_declaration: $ =>
      seq(
        optional($.attributes),
        choice(
          prec(PREC.LET_DECL, $.function_or_value_defn),
          prec(PREC.DO_DECL, $.do),
        ),
      ),

    do: $ => prec(PREC.DO_EXPR + 1,
      seq(
        'do',
        $._expression_block,
      )),

    _function_or_value_defns: $ =>
      prec.right(
        seq($._function_or_value_defn_body, repeat(seq('and', $._function_or_value_defn_body))),
      ),

    function_or_value_defn: $ =>
      seq(
        choice('let', 'let!'),
        choice(
          $._function_or_value_defn_body,
          seq('rec', $._function_or_value_defns),
        ),
      ),

    _function_or_value_defn_body: $ =>
      seq(
        choice(
          $.function_declaration_left,
          $.value_declaration_left,
        ),
        optional(seq(':', $.type)),
        '=',
        field('body', $._expression_block),
      ),

    function_declaration_left: $ =>
      prec.left(3, seq(
        optional('inline'),
        optional($.access_modifier),
        prec(100, $._identifier_or_op),
        optional($.type_arguments),
        $.argument_patterns,
      )),

    value_declaration_left: $ =>
      prec.left(2, seq(
        optional('mutable'),
        optional($.access_modifier),
        $._pattern,
        optional($.type_arguments),
      )),

    _pattern: $ =>
      choice(
        alias('null', $.null_pattern),
        alias('_', $.wildcard_pattern),
        alias($.const, $.const_pattern),
        $.as_pattern,
        $.disjunct_pattern,
        $.conjunct_pattern,
        $.cons_pattern,
        $.repeat_pattern,
        $.paren_pattern,
        $.list_pattern,
        $.array_pattern,
        $.record_pattern,
        $.typed_pattern,
        $.attribute_pattern,
        $.type_check_pattern,
        $.optional_pattern,
        $.identifier_pattern,
      ),

    repeat_pattern: $ =>
      prec.right(
        seq(
          $._pattern,
          repeat1(prec.right(seq(',', $._pattern))),
        )),

    argument_patterns: $ =>
      // argument patterns are generally no different from normal patterns.
      // however, any time an argument pattern is a valid node, (i.e. inside a beginning fun decl)
      // it is always the correct node to construct.
      prec.left(1000, repeat1($._atomic_pattern)),

    _atomic_pattern: $ =>
      prec(1000,
        choice(
          'null',
          '_',
          $.const,
          $.long_identifier,
          $.list_pattern,
          $.record_pattern,
          $.array_pattern,
          seq('(', $._pattern, ')'),
          // :? atomic_type
        )),

    identifier_pattern: $ =>
      prec.left(-1,
        seq($.long_identifier, optional($._pattern_param), optional($._pattern)),
      ),

    _pattern_param: $ =>
      prec(2,
        choice(
          $.const,
          $.long_identifier,
          // seq($.long_identifier, $._pattern_param),
          // seq($._pattern_param, ":", $.type),
          // seq(
          //   "[",
          //   $._pattern_param,
          //   repeat(seq($._seperator, $._pattern_param)),
          //   "]",
          // ),
          // seq(
          //   "(",
          //   $._pattern_param,
          //   repeat(seq($._seperator, $._pattern_param)),
          //   ")",
          // ),
          // seq("<@", $._expression, "@>"),
          // seq("<@@", $._expression, "@@>"),
          'null',
        ),
      ),
    //
    // Pattern rules (END)
    //

    //
    // Expressions (BEGIN)
    //

    _expression_block: $ =>
      seq(
        $._indent,
        $._expression,
        $._dedent,
      ),

    _expression: $ =>
      choice(
        'null',
        $.const,
        $.paren_expression,
        $.begin_end_expression,
        $.long_identifier_or_op,
        $.dot_expression,
        $.typed_expression,
        $.infix_expression,
        $.index_expression,
        $.mutate_expression,
        $.object_instantiation_expression,
        $.list_expression,
        $.array_expression,
        $.ce_expression,
        $.prefixed_expression,
        $.brace_expression,
        $.anon_record_expression,
        $.typecast_expression,
        $.declaration_expression,
        $.do_expression,
        $.fun_expression,
        $.function_expression,
        $.sequential_expression,
        $.if_expression,
        $.while_expression,
        $.for_expression,
        $.match_expression,
        $.try_expression,
        $.literal_expression,
        // $.call_expression,
        $.tuple_expression,
        $.application_expression,
        // (static-typars : (member-sig) expr)
      ),

    tuple_expression: $ =>
      prec.left(PREC.TUPLE_EXPR,
        seq(
          $._expression,
          ',',
          $._expression,
        ),
      ),

    brace_expression: $ =>
      prec(PREC.CE_EXPR + 1,
        seq(
          '{',
          scoped(
            choice(
              $.field_initializers,
              $.with_field_expression,
              $.object_expression,
            ),
            $._indent,
            $._dedent),
          '}',
        )),

    with_field_expression: $ =>
      seq(
        $._expression,
        'with',
        scoped($.field_initializers, $._indent, $._dedent),
      ),

    prefixed_expression: $ =>
      seq(
        choice('return', 'return!', 'yield', 'yield!', 'lazy', 'assert', 'upcast', 'downcast', $.prefix_op),
        prec.right(PREC.PREFIX_EXPR, $._expression),
      ),

    typecast_expression: $ =>
      prec(PREC.SPECIAL_INFIX,
        seq(
          $._expression,
          choice(
            ':',
            ':>',
            ':?',
            ':?>',
          ),
          $.type,
        )),

    for_expression: $ =>
      prec(PREC.DO_EXPR + 1,
        seq(
          'for',
          choice(
            seq($._pattern, 'in', $._expression_or_range),
            seq($.identifier, '=', $._expression, choice('to', 'downto'), $._expression),
          ),
          'do',
          $._expression_block,
          optional('done'),
        )),

    _if_then_else_expression: $ =>
      prec.left(PREC.IF_EXPR,
        seq(
          'if',
          field('guard', $._expression),
          $._then_expression,
          repeat($.elif_expression),
          $._else_expression,
        )),

    _if_then_expression: $ =>
      prec.left(PREC.IF_EXPR,
        seq(
          'if',
          field('guard', $._expression),
          $._then_expression,
          $._dedent
        )),

    if_expression: $ => choice($._if_then_expression, $._if_then_else_expression),

    fun_expression: $ =>
      prec.right(PREC.FUN_EXPR,
        seq(
          'fun',
          $.argument_patterns,
          '->',
          $._expression_block,
        )),

    mutate_expression: $ =>
      prec.right(PREC.LARROW,
        seq(
          field('assignee', $._expression),
          '<-',
          field('value', $._expression),
        )),

    index_expression: $ =>
      prec(PREC.INDEX_EXPR,
        seq(
          $._expression,
          '.[',
          choice(
            field('index', $._expression),
            $.slice_ranges,
          ),
          ']',
        )),

    dot_expression: $ =>
      prec.right(PREC.DOT,
        seq(
          field('base', $._expression),
          '.',
          field('field', $.long_identifier_or_op),
        )),

    declaration_expression: $ =>
      seq(
        choice(
          seq(choice('use', 'use!'), $.identifier, '=', $._expression_block),
          $.function_or_value_defn,
        ),
        field('in', $._expression)
      ),

    do_expression: $ =>
      prec(PREC.DO_EXPR,
        seq(
          choice('do', 'do!'),
          $._expression_block,
        )),

    _list_element: $ =>
      seq(
        $._indent,
        choice(
          $._list_elements,
          $._comp_or_range_expression,
          $.slice_ranges,
        ),
        $._dedent,
      ),

    list_expression: $ =>
      seq(
        '[',
        optional($._list_element),
        ']',
      ),

    array_expression: $ =>
      seq(
        '[|',
        optional($._list_element),
        '|]',
      ),

    _expression_or_range: $ =>
      choice(
        $._expression,
        $.range_expression,
      ),

    begin_end_expression: $ => prec(PREC.PAREN_EXPR, seq('begin', $._expression, 'end')),

    paren_expression: $ => prec(PREC.PAREN_EXPR,
      seq(
        '(',
        $._expression_block,
        ')',
      )),

    application_expression: $ =>
      prec.left(PREC.APP_EXPR,
        seq(
          $._expression,
          choice(
            prec(PREC.APP_EXPR, $._expression),
            prec(PREC.PAREN_APP + 100, seq(token.immediate(prec(10000, '(')), optional($._expression_block), ')'),
            )
          )
        )),

    infix_expression: $ =>
      prec.left(PREC.SPECIAL_INFIX,
        seq(
          $._expression,
          $.infix_op,
          $._expression,
        )),


    ce_expression: $ =>
      prec.left(PREC.CE_EXPR,
        seq(
          prec(-1, $._expression),
          '{',
          scoped($._comp_or_range_expression, $._indent, $._dedent),
          '}',
        )),

    _comp_or_range_expression: $ =>
      choice(
        $._expression,
        $.short_comp_expression,
        // $.range_expression, TODO
      ),

    // _comp_expressions: $ =>
    //   choice(
    //     $.let_ce_expressions,
    //     $.do_ce_expressions,
    //     $.use_ce_expressions,
    //     $.yield_ce_expressions,
    //     $.return_ce_expressions,
    //     $.if_ce_expressions,
    //     $.match_ce_expressions,
    //     $.try_ce_expressions,
    //     $.while_expressions,
    //     $.for_ce_expressions,
    //     $.sequential_ce_expressions,
    //     $._expression,
    //   ),

    // for_ce_expressions: $ =>
    //   prec.left(
    //   seq(
    //     "for",
    //     choice(
    //         seq($._pattern, "in", $._expression_or_range),
    //         seq($.identifier, "=", $._expression, "to", $._expression),
    //     ),
    //     "do",
    //       $._virtual_open_section,
    //       $._comp_expressions,
    //       $._virtual_end_section,
    //     optional("done"),
    //   )),
    //
    // try_ce_expressions: $ =>
    //   prec(PREC.MATCH_EXPR,
    //   seq(
    //     "try",
    //     $._virtual_open_section,
    //     $._comp_expressions,
    //     $._virtual_end_section,
    //     choice(
    //       seq("with", $.comp_rules),
    //       seq("finally", $.comp_rules)
    //     ),
    //   )),
    //
    // match_ce_expressions: $ =>
    //   prec(PREC.MATCH_EXPR,
    //   seq(
    //     "match",
    //     $._expression,
    //     "with",
    //     $.comp_rules,
    //   )),
    //
    // sequential_ce_expressions: $ =>
    //   prec.left(PREC.SEQ_EXPR,
    //   seq(
    //     $._comp_expressions,
    //     repeat1(prec.right(PREC.SEQ_EXPR, seq(choice(";", $._newline), $._comp_expressions))),
    //   )),
    //
    // _else_ce_expressions: $ =>
    //   prec(PREC.ELSE_EXPR,
    //   seq(
    //     "else",
    //     $._virtual_open_section,
    //     field("else_branch", $._comp_expressions),
    //     $._virtual_end_section,
    //   )),
    //
    // elif_ce_expressions: $ =>
    //   prec(PREC.ELSE_EXPR,
    //   seq(
    //     "elif",
    //     $._virtual_open_section,
    //     field("guard", $._expression),
    //     $._virtual_end_section,
    //     "then",
    //     $._virtual_open_section,
    //     field("then", $._comp_expressions),
    //     $._virtual_end_section,
    //   )),
    //
    // if_ce_expressions: $ =>
    //   prec.left(PREC.IF_EXPR,
    //   seq(
    //     "if",
    //     $._virtual_open_section,
    //     field("guard", $._expression),
    //     $._virtual_end_section,
    //     "then",
    //     field("then", $._comp_expressions),
    //     repeat($.elif_ce_expressions),
    //     optional($._else_ce_expressions),
    //   )),
    //
    // return_ce_expressions: $ =>
    //   prec.left(PREC.PREFIX_EXPR,
    //   seq(
    //     choice("return!", "return"),
    //     $._expression,
    //   )),
    //
    // yield_ce_expressions: $ =>
    //   prec.left(PREC.PREFIX_EXPR,
    //   seq(
    //     choice("yield!", "yield"),
    //     $._expression,
    //   )),
    //
    // do_ce_expressions: $ =>
    //   seq(
    //     choice("do!", "do"),
    //     $._expression,
    //     $._comp_expressions,
    //   ),
    //
    // use_ce_expressions: $ =>
    //   seq(
    //     choice("use!", "use"),
    //     $._pattern,
    //     "=",
    //     $._virtual_open_section,
    //     $._expression,
    //     $._virtual_end_section,
    //     $._comp_expressions,
    //   ),
    //
    // let_ce_expressions: $ =>
    //   seq(
    //     choice("let!", "let"),
    //     $._pattern,
    //     "=",
    //     $._virtual_open_section,
    //     $._expression,
    //     $._virtual_end_section,
    //     $._comp_expressions,
    //   ),

    type: $ =>
      prec(4, choice(
        $._simple_type,
        $._generic_type,
        $._paren_type,
        $._function_type,
        $._compound_type,
        $._postfix_type,
        $._list_type,
        $._static_type,
        $.type_argument,
        $._constrained_type,
        $._flexible_type,
      )),

    _simple_type: $ => $.long_identifier,
    _generic_type: $ => prec.right(5, seq($.long_identifier, '<', optional($.type_attributes), '>')),
    _paren_type: $ => seq('(', $.type, ')'),
    _function_type: $ => prec.right(seq($.type, '->', $.type)),
    _compound_type: $ => prec.right(seq($.type, repeat1(prec.right(seq('*', $.type))))),
    _postfix_type: $ => prec.left(4, seq($.type, $.long_identifier)),
    _list_type: $ => seq($.type, '[]'),
    _static_type: $ => prec(10, seq($.type, $.type_arguments)),
    _constrained_type: $ => prec.right(seq($.type_argument, ':>', $.type)),
    _flexible_type: $ => prec.right(seq(token.immediate('#'), $.type)),

    field_initializer: $ =>
      prec(PREC.SPECIAL_INFIX + 1,
        seq(
          field('field', $.long_identifier),
          token(prec(10000000, '=')),
          field('value', $._expression)),
      ),

    field_initializers: $ =>
      prec(10000000,
        seq(
          $.field_initializer,
          repeat(seq($._newline, $.field_initializer))
        )),

    //
    // Type rules (END)
    //

    //
    // Constants (BEGIN)
    //
    _digit_char_imm: _ => token.immediate(/[0-9]/),
    _string_char: $ => choice(
      $._simple_string_char,
      $._escape_char,
      $._non_escape_char,
      $._trigraph,
      $._unicodegraph_short,
      $._unicodegraph_long,
    ),

    string: $ =>
      choice(
        seq('"', repeat($._string_char), '"'),
        $.format_string,
      ),
    unit: _ => '()',

    const: $ => choice(
      $.sbyte, $.int16, $.int32, $.int64, $.byte, $.uint16, $.uint32, $.int,
      $.nativeint, $.unativeint, $.decimal,
      $.uint64, $.ieee32, $.ieee64, $.bignum, $.char, $.string,
      $.verbatim_string, $.triple_quoted_string, $.bytearray,
      $.verbatim_bytearray, $.bytechar, $.bool, $.unit),

    // Identifiers:
    long_identifier: $ =>
      prec.right(seq($.identifier, repeat(seq('.', $.identifier)))),

    int: $ => seq(/[0-9]/, repeat($._digit_char_imm)),
